Update deployments with Github release (#537)
* Github release

* Github release

* Update deploy with ghr, added npm postversion

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,16 @@ jobs:
           name: Install SVN
           command: sudo apt-get update && sudo apt-get install subversion
       - run:
+          name: Install golang and ghr
+          command: |
+            curl -O https://storage.googleapis.com/golang/go1.11.2.linux-amd64.tar.gz
+            tar -xvf go1.11.2.linux-amd64.tar.gz
+            sudo mv go /usr/local
+            export GOPATH=$HOME/work
+            export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
+            source ~/.profile
+            go get -u github.com/tcnksm/ghr
+      - run:
           name: Install WPCLI
           command: |
             curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
