--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"build": "cgb-scripts build",
 		"eject": "cgb-scripts eject",
 		"version": "grunt version && git add -A .",
+		"postversion": "git push && git push --tags",
 		"makepot": "wp i18n make-pot . --merge=languages/coblocks-js.pot --skip-js --skip-audit --headers='{\"Last-Translator\":\"plugins@godaddy.com\",\"Report-Msgid-Bugs-To\":\"https://github.com/godaddy/coblocks/issues\"}' --file-comment='Copyright (c) 2019 GoDaddy Operating Company, LLC. All Rights Reserved.'",
 		"babel": "babel src --ignore src/blocks/gist/components/gist.js",
 		"babel:json": "wp i18n make-json languages",
