--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,17 @@ workflows:
       # Support PHP Versions
       # http://php.net/supported-versions.php
       - php71-build # Will be deprecated on 1 Dec 2019
+        filters:
+          tags:
+            only: /.*/
+          branches:
+            only: /.*/
       - php72-build # Will be deprecated on 30 Nov 2020
+        filters:
+          tags:
+            only: /.*/
+          branches:
+            only: /.*/
       - deploy:
           requires:
             - php71-build
@@ -13,8 +23,6 @@ workflows:
           filters:
             tags:
               only: /.*/
-            branches:
-              only: master
 
 version: 2
 jobs:
