Tweak circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,11 @@ workflows:
       # http://php.net/supported-versions.php
       - php71-build: # Will be deprecated on 1 Dec 2019
           filters:
-            branches:
+            tags:
               only: /.*/
       - php72-build: # Will be deprecated on 30 Nov 2020
           filters:
-            branches:
+            tags:
               only: /.*/
       - deploy:
           requires:
