--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/php:latest-node-browsers-legacy
+      - image: circleci/golang:latest-node-browsers-legacy
     steps:
       - checkout
       - run:
@@ -94,25 +94,15 @@ jobs:
           name: Install SVN
           command: sudo apt-get update && sudo apt-get install subversion
       - run:
-          name: Install golang
-          command: |
-            curl -O https://storage.googleapis.com/golang/go1.11.2.linux-amd64.tar.gz
-            tar -xvf go1.11.2.linux-amd64.tar.gz
-            sudo mv go /usr/local
-            export GOPATH=$HOME/work
-            export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
-            source ~/.profile
-            rm -rf go1.11.2.linux-amd64.tar.gz
-      - run:
-          name: Install ghr
-          command: |
-            go get -u github.com/tcnksm/ghr
-      - run:
           name: Install WPCLI
           command: |
             curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
             chmod +x wp-cli.phar
             sudo mv wp-cli.phar /usr/local/bin/wp
+      - run:
+          name: Install ghr
+          command: |
+            go get -u github.com/tcnksm/ghr
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
