--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
           command: sudo apt-get update && sudo apt-get install subversion
       - run:
           name: Install PHP
-          command: sudo apt-get install php libapache2-mod-php
+          command: sudo apt-get install php libapache2-mod-php php-mbstring
       - run:
           name: Install WPCLI
           command: |
