--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
 		"url": "https://github.com/godaddy/coblocks/issues"
 	},
 	"scripts": {
-		"start": "cgb-scripts start",
-		"build": "cgb-scripts build",
-		"eject": "cgb-scripts eject",
+		"start": "node .dev/scripts/start.js",
+		"build": "node .dev/scripts/build.js",
 		"version": "grunt version && git add -A .",
 		"postversion": "git push && git push --tags",
 		"makepot": "wp i18n make-pot . --merge=languages/coblocks-js.pot --skip-js --skip-audit --headers='{\"Last-Translator\":\"plugins@godaddy.com\",\"Report-Msgid-Bugs-To\":\"https://github.com/godaddy/coblocks/issues\"}' --file-comment='Copyright (c) 2019 GoDaddy Operating Company, LLC. All Rights Reserved.'",
@@ -27,22 +26,49 @@
 		"@wordpress/plugins": "^1.0.4",
 		"@wordpress/postcss-themes": "^2.1.0",
 		"@wordpress/redux-routine": "^3.1.0",
-		"cgb-scripts": "^1.17.0",
+		"autoprefixer": "^7.2.4",
+		"babel-core": "^6.25.0",
+		"babel-eslint": "^8.2.1",
+		"babel-loader": "^7.1.1",
+		"babel-preset-cgb": "^1.6.0",
+		"cgb-dev-utils": "^1.5.0",
+		"chalk": "^2.3.0",
 		"classnames": "2.2.5",
 		"compose": "^0.1.2",
+		"cross-env": "^5.0.1",
+		"cross-spawn": "^5.1.0",
 		"delete-empty": "^2.0.0",
 		"email-validator": "2.0.4",
-		"eslint": "^4.19.1",
+		"eslint": "^4.15.0",
 		"eslint-config-wordpress": "^2.0.0",
+		"eslint-plugin-jest": "^21.6.1",
+		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-plugin-react": "^7.5.1",
+		"eslint-plugin-wordpress": "^0.1.0",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"filesize": "^3.5.11",
+		"fs-extra": "^5.0.0",
+		"gzip-size": "^4.1.0",
+		"inquirer": "^5.0.0",
 		"lodash": "4.17.11",
 		"memize": "^1.0.5",
-		"postcss": "^6.0.23",
+		"node-sass": "^4.7.2",
+		"ora": "^1.3.0",
+		"postcss": "7.0.13",
+		"postcss-loader": "^2.0.10",
+		"raw-loader": "^0.5.1",
 		"react": "^16.8.4",
 		"react-flickity-component": "^3.2.0",
 		"react-google-maps": "^9.4.5",
 		"react-masonry-component": "^6.2.1",
 		"redux": "^4.0.1",
-		"stylelint": "^9.10.1"
+		"resolve-pkg": "^1.0.0",
+		"sass-loader": "^6.0.6",
+		"shelljs": "^0.8.0",
+		"style-loader": "^0.19.1",
+		"stylelint": "^9.10.1",
+		"update-notifier": "^2.3.0",
+		"webpack": "^3.1.0"
 	},
 	"devDependencies": {
 		"@wordpress/babel-plugin-makepot": "^2.1.3",
@@ -90,5 +116,51 @@
 	},
 	"eslintConfig": {
 		"extends": "wordpress"
+	},
+	"babel": {
+		"presets": [
+			[
+				"env",
+				{
+					"modules": false,
+					"targets": {
+						"browsers": [
+							"last 2 Chrome versions",
+							"last 2 Firefox versions",
+							"last 2 Safari versions",
+							"last 2 iOS versions",
+							"last 1 Android version",
+							"last 1 ChromeAndroid version",
+							"ie 11"
+						]
+					}
+				}
+			]
+		],
+		"plugins": [
+			[
+				"transform-object-rest-spread"
+			],
+			[
+				"transform-object-rest-spread",
+				{
+					"useBuiltIns": true
+				}
+			],
+			[
+				"transform-react-jsx",
+				{
+					"pragma": "wp.element.createElement"
+				}
+			],
+			[
+				"transform-runtime",
+				{
+					"helpers": false,
+					"polyfill": false,
+					"regenerator": true
+				}
+			]
+		]
 	}
 }
