--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
 		"babel-cli": "^6.26.0",
 		"babel-core": "^6.25.0",
 		"babel-loader": "^7.1.4",
+		"babel-plugin-transform-class-properties": "^6.24.1",
 		"grunt": "^1.0.3",
 		"grunt-contrib-clean": "^1.0.0",
-		"grunt-contrib-copy": "^1.0.0",
 		"grunt-contrib-compress": "^1.4.1",
+		"grunt-contrib-copy": "^1.0.0",
 		"grunt-contrib-cssmin": "^2.0.0",
 		"grunt-contrib-imagemin": "^3.1.0",
 		"grunt-contrib-jshint": "^1.1.0",
