Introduce jest test directory and starter test. Add jest job to circleci config

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
-	"presets": ["@wordpress/babel-preset-default"],
+	"presets": [
+		"@wordpress/babel-preset-default"
+	],
 	"plugins": [
 		[
 			"@wordpress/babel-plugin-makepot",
@@ -7,5 +9,8 @@
 				"output": "languages/coblocks-js.pot"
 			}
 		]
+	],
+	"test": [
+		"jest"
 	]
 }
