--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,7 @@ jobs:
           name: Run jest tests
           command: npm run test --coverage
       - store_artifacts:
-          path: ${CIRCLE_WORKING_DIRECTORY}/coverage
+          path: ${HOME}/project/coverage
 
   deploy:
     docker:
