Test destination in circle jest config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,7 @@ jobs:
           command: npm run test --coverage
       - store_artifacts:
           path: coverage
+          destination: coverage
 
   deploy:
     docker:
