--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"babel-cli": "^6.26.0",
 		"babel-core": "^6.25.0",
 		"babel-loader": "^7.1.4",
+		"eslint-plugin-wordpress": "^0.1.0",
 		"grunt": "^1.0.3",
 		"grunt-contrib-clean": "^1.0.0",
 		"grunt-contrib-compress": "^1.4.1",
