--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
 		"matchdep": "^2.0.0",
 		"node-sass": "^4.12.0",
 		"prettier-stylelint": "^0.4.2",
+		"react-beautiful-dnd": "^11.0.3",
 		"stylelint-config-prettier": "^3.1.0",
 		"stylelint-config-wordpress": "^13.1.0",
 		"stylelint-order": "^0.8.1"
