--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,11 @@
 		"jsx-a11y/media-has-caption": "off",
 		"jsx-a11y/no-noninteractive-tabindex": "off",
 		"jsx-a11y/role-has-required-aria-props": "off",
+		"jsx-a11y/no-onchange": "off",
+		"jsx-a11y/anchor-is-valid": "off",
+		"jsx-a11y/label-has-for": "off",
+		"jsx-a11y/click-events-have-key-events": "off",
+		"jsx-a11y/no-static-element-interactions": "off",
 		"jsx-quotes": "error",
 		"key-spacing": "error",
 		"keyword-spacing": "error",
