--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"test": "jest --config .dev/tests/jest/jest.config.js"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.4.4",
 		"@babel/core": "^7.4.5",
 		"@babel/plugin-proposal-class-properties": "^7.4.4",
 		"@babel/runtime-corejs2": "^7.4.5",
