--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
 		"es6": true,
 		"node": true,
 		"mocha": true,
-		"jest/globals": true
+		"jest/globals": true,
+		"jquery": true
 	},
 	"parserOptions": {
 		"sourceType": "module",
