--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
 		"build": "node .dev/scripts/build.js",
 		"version": "grunt version && git add -A .",
 		"postversion": "git push && git push --tags",
-		"makepot": "wp i18n make-pot . --merge=languages/coblocks-js.pot --skip-audit --exclude=build,dist --headers='{\"Last-Translator\":\"plugins@godaddy.com\",\"Report-Msgid-Bugs-To\":\"https://github.com/godaddy/coblocks/issues\"}' --file-comment='Copyright (c) 2019 GoDaddy Operating Company, LLC. All Rights Reserved.'",
+		"makepot": "wp i18n make-pot . --merge=languages/coblocks-js.pot --skip-audit --exclude=build,dist --headers='{\"Last-Translator\":\"plugins@godaddy.com\",\"Report-Msgid-Bugs-To\":\"https://github.com/godaddy/coblocks/issues\"}' --file-comment='Copyright (c) 2019 GoDaddy Operating Company, LLC. All Rights Reserved.' && .dev/bin/update-po.sh",
 		"babel": "babel src --ignore src/blocks/gist/components/gist.js",
 		"babel:json": "wp i18n make-json languages",
 		"babel:build": "npm run babel && npm run makepot && npm run babel:json",
 		"test": "jest --config .dev/tests/jest/jest.config.js"
+	},
+	"locales": {
+		"da_DK": "Dansk",
+		"de_DE": "Deutsch"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.4.4",
@@ -65,11 +69,9 @@
 		"grunt-contrib-watch": "^1.1.0",
 		"grunt-dev-update": "^2.3.0",
 		"grunt-eslint": "^21.0.0",
-		"grunt-potomo": "^3.5.0",
 		"grunt-sass": "^3.0.2",
 		"grunt-shell": "^2.1.0",
 		"grunt-text-replace": "^0.4.0",
-		"grunt-wp-i18n": "^1.0.2",
 		"grunt-wp-readme-to-markdown": "^2.0.1",
 		"gzip-size": "^4.1.0",
 		"inquirer": "^5.0.0",
