--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"babel:json": "wp i18n make-json languages",
 		"babel:build": "npm run babel && npm run makepot && npm run babel:json",
 		"test": "jest --config .dev/tests/jest/jest.config.js",
-		"deploy-i18n": "./node_modules/.bin/cypress run"
+		"deploy-i18n": "./node_modules/.bin/cypress run -s './.dev/tests/cypress/integration/deploy-translations.js'"
 	},
 	"locales": {
 		"da_DK": "Dansk",
