--- a/package.json
+++ b/package.json
@@ -24,7 +24,34 @@
 	},
 	"locales": {
 		"da_DK": "Dansk",
-		"de_DE": "Deutsch"
+		"de_DE": "Deutsch",
+		"el": "Ελληνικά",
+		"es_ES": "Español",
+		"es_MX": "Español de México",
+		"fi": "Suomi",
+		"fr_FR": "Français",
+		"hi_IN": "हिन्दी",
+		"id_ID": "Bahasa Indonesia",
+		"it_IT": "Italiano",
+		"ja": "日本語",
+		"ko_KR": "한국어",
+		"mr": "मराठी",
+		"ms_MY": "Bahasa Melayu",
+		"nb_NO": "Norsk bokmål",
+		"nl_NL": "Nederlands",
+		"pl_PL": "Polski",
+		"pt_BR": "Português do Brasil",
+		"pt_PT": "Português",
+		"ru_RU": "Русский",
+		"sr_RS": "Српски језик",
+		"sv_SE": "Svenska",
+		"th": "ไทย",
+		"tl": "Tagalog",
+		"tr_TR": "Türkçe",
+		"uk": "Українська",
+		"vi": "Tiếng Việt",
+		"zh_CN": "简体中文",
+		"zh_TW": "繁體中文"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.4.4",
