Introduce script to deploy translations to Glotpress (#793)
* Remove i18n strings, clean up .pot file

* Remove __

* Add stubs for supported languages. Merge existing .po files with updated .pot file.

* Update comment

* Ignore languages/*.json

* Update da_DK.po de_DE.po add languages/*.mo to .gitignore

* Tweaks

* Introduce a script to upload translation files to Glotpress

* Tweak config. Ignore screenshots dir. Update package.json command.

* Tweak syntax. Remove rogue comma

* Add @todo comment

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 *.cache
 .ftppass
 coverage
-cypress
+.dev/tests/cypress/screenshots
+wp_creds.json
 sftp.json
 dist/blocks.build.js
 dist/blocks.editor.build.css
