--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,7 @@ sftp.json
 dist/blocks.build.js
 dist/blocks.editor.build.css
 dist/blocks.style.build.css
-.DS_Store
-includes/.DS_Store
-.DS_Store
+**/.DS_Store
 sandbox.json
 languages/coblocks-js.pot
 languages/*.json
