--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,9 @@ jobs:
           name: Install PHP
           command: sudo apt-get install php libapache2-mod-php php-mbstring
       - run:
+          name: Install gettext
+          command: sudo apt-get install gettext
+      - run:
           name: Install WPCLI
           command: |
             curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
