--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@babel/runtime-corejs2": "^7.4.5",
 		"@wordpress/babel-plugin-makepot": "^2.1.3",
 		"@wordpress/babel-preset-default": "^4.3.0",
+		"@wordpress/block-editor": "^3.1.0",
 		"@wordpress/i18n": "^1.2.3",
 		"@wordpress/plugins": "^1.0.4",
 		"@wordpress/postcss-themes": "^2.1.0",
@@ -69,7 +70,7 @@
 		"chalk": "^2.3.0",
 		"classnames": "2.2.5",
 		"compose": "^0.1.2",
-		"core-js": "^2.6.9",
+		"core-js": "^3.1.4",
 		"cross-env": "^5.0.1",
 		"cross-spawn": "^5.1.0",
 		"cypress": "^3.4.1",
@@ -116,6 +117,7 @@
 		"react-flickity-component": "^3.2.0",
 		"react-google-maps": "^9.4.5",
 		"react-masonry-component": "^6.2.1",
+		"react-test-renderer": "^16.9.0",
 		"redux": "^4.0.1",
 		"resolve-pkg": "^1.0.0",
 		"sass-loader": "^6.0.6",
