--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"babel": "babel src --ignore src/blocks/gist/components/gist.js",
 		"babel:json": "wp i18n make-json languages",
 		"babel:build": "npm run babel && npm run babel:json && npm run makepot",
-		"test": "jest --config .dev/tests/jest/jest.config.js",
+		"test": "jest --config .dev/tests/jest/jest.config.js --silent",
 		"deploy-i18n": "./node_modules/.bin/cypress run -s './.dev/tests/cypress/integration/deploy-translations.js'"
 	},
 	"locales": {
