--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@wordpress/babel-plugin-makepot": "^2.1.3",
 		"@wordpress/babel-preset-default": "^4.3.0",
 		"@wordpress/block-editor": "^3.1.0",
+		"@wordpress/block-serialization-default-parser": "^3.4.0",
 		"@wordpress/i18n": "^1.2.3",
 		"@wordpress/plugins": "^1.0.4",
 		"@wordpress/postcss-themes": "^2.1.0",
