--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@babel/core": "^7.4.5",
 		"@babel/plugin-proposal-class-properties": "^7.4.4",
 		"@babel/runtime-corejs2": "^7.4.5",
+		"@testing-library/jest-dom": "^4.1.0",
 		"@wordpress/babel-plugin-makepot": "^2.1.3",
 		"@wordpress/babel-preset-default": "^4.3.0",
 		"@wordpress/block-editor": "^3.1.0",
@@ -104,6 +105,7 @@
 		"gzip-size": "^4.1.0",
 		"inquirer": "^5.0.0",
 		"jest": "^24.8.0",
+		"jsdom": "^15.1.1",
 		"lodash": "^4.17.11",
 		"matchdep": "^2.0.0",
 		"memize": "^1.0.5",
