Add code coverage report to circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,9 +110,9 @@ jobs:
           command: grunt eslint
       - run:
           name: Run jest tests
-          command: npm run test --coverage
+          command: npm test -- --coverage --coverageDirectory=/tmp/artifacts/code-coverage
       - store_artifacts:
-          path: coverage
+          path: /tmp/artifacts/code-coverage
           destination: jest-coverage
 
   deploy:
