--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
 		"gzip-size": "^4.1.0",
 		"inquirer": "^5.0.0",
 		"jest": "^24.8.0",
+		"jest-junit": "^8.0.0",
 		"jsdom": "^15.1.1",
 		"lodash": "^4.17.11",
 		"matchdep": "^2.0.0",
