--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,9 +110,10 @@ jobs:
           command: grunt eslint
       - run:
           name: Run jest tests
-          command: npm test -- --ci
+          command: npm test -- --ci --runInBand
           environment:
-            JEST_JUNIT_OUTPUT_DIR: /tmp/artifacts/code-coverage/js-test-results.xml
+            JEST_JUNIT_OUTPUT_DIR: /tmp/artifacts/code-coverage/
+            JEST_JUNIT_OUTPUT_NAME: js-test-results.xml
       - store_artifacts:
           path: /tmp/artifacts/code-coverage
           destination: jest-coverage
