Add advanced image options (#749)
* add the advanced image block

* fix formatting and the __ error

* fix formatting

* better code structure

* change lodash import and global ajaxurl to avoid eslint config comments

* Apply minor UI tweaks

* switch controls to rotate left/right

* fix code style

* detect image change and adjust properly

* Tweak UI around rotate/orientation + add icons

* Minor style tweaks to follow Gutenberg patterns better

* create a reset all button

* Add alt text

* do not show crop options for videos

* use global ajaxurl, remove unneeded imports

* enable crop information retrieval

* allow crop data flow

* reset control after changing image

* PHPCS/ESLint tweaks

* use blockEditor instead of block, since it is deprecated

* add cropping style

* proper loading for cropping

* do not display cropping when nothing is changing

* Remove "Cropping" and simply use opacity to signal loading

* Update class

* Rename crop-system to crop-settings

* Cleaning up, organizing, renaming to coblocks conventions

* AttachmentOriginalImage -> originalImage

* Add _x context to control labels

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,9 @@ sftp.json
 dist/blocks.build.js
 dist/blocks.editor.build.css
 dist/blocks.style.build.css
-**/.DS_Store
 sandbox.json
+/.idea/
+**/.DS_Store
 languages/coblocks-js.pot
 languages/*.json
 languages/*.mo
