--- a/package.json
+++ b/package.json
@@ -77,8 +77,9 @@
 		"cypress": "^3.4.1",
 		"delete-empty": "^2.0.0",
 		"email-validator": "2.0.4",
-		"eslint": "^4.15.0",
+		"eslint": "^4.19.1",
 		"eslint-config-wordpress": "^2.0.0",
+		"eslint-loader": "^3.0.2",
 		"eslint-plugin-jest": "^21.6.1",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
 		"eslint-plugin-react": "^7.5.1",
@@ -102,9 +103,11 @@
 		"grunt-text-replace": "^0.4.0",
 		"grunt-wp-readme-to-markdown": "^2.0.1",
 		"gzip-size": "^4.1.0",
+		"husky": "^3.0.8",
 		"inquirer": "^5.0.0",
 		"jest": "^24.8.0",
 		"jsdom": "^15.1.1",
+		"lint-staged": "^9.4.1",
 		"lodash": "^4.17.11",
 		"matchdep": "^2.0.0",
 		"memize": "^1.0.5",
@@ -130,6 +133,17 @@
 		"stylelint-order": "^0.8.1",
 		"update-notifier": "^2.3.0",
 		"webpack": "^3.1.0"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.js": [
+			"eslint",
+			"jest --config .dev/tests/jest/jest.config.js --silent --findRelatedTests"
+		]
 	},
 	"stylelint": {
 		"extends": [
