--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@babel/plugin-proposal-class-properties": "^7.4.4",
 		"@babel/runtime-corejs2": "^7.4.5",
 		"@testing-library/jest-dom": "^4.1.0",
+		"@wordpress/api-fetch": "^2.2.8",
 		"@wordpress/babel-plugin-makepot": "3.2.0",
 		"@wordpress/babel-preset-default": "4.5.0",
 		"@wordpress/block-editor": "3.1.0",
