Improve deprecation tests by exposing actionable information. (#970)
* Only generate tests for attributes we have variations of

* Expost attributes we need variations for with a test

* Stringify an variation to show what's being tested

* Alter invalid block object data to improve Jest output

* runInBand Jest option is recommended on CircleCI

* Add noStackTrace to clean up Jest failure reporting

* Removing null fallbacks conditional will never be used

* 100% coverage on typography/apply-style.js

* Removing null fallbacks conditional will never be used

* Unregister block afterEach test to prevent JS error

* Separate imports in helper file

* Test the attributes after applying filters

* Test attributes added by filters.

* The Jest --ci flag is also recommended by CircleCI

* Update deprecations with discovered attributes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,7 @@ jobs:
           command: grunt eslint
       - run:
           name: Run jest tests
-          command: npm test -- --coverage --coverageDirectory=/tmp/artifacts/code-coverage
+          command: npm test -- --ci --runInBand --coverage --coverageDirectory=/tmp/artifacts/code-coverage
       - store_artifacts:
           path: /tmp/artifacts/code-coverage
           destination: jest-coverage
