--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "squizlabs/php_codesniffer": "^3.5",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "phpcompatibility/phpcompatibility-wp": "^2.1",
-        "wp-coding-standards/wpcs": "^2.1"
+        "wp-coding-standards/wpcs": "^2.1",
+        "phpunit/phpunit": "^7"
     },
     "scripts": {
-        "lint": "@php ./vendor/bin/phpcs"
+		"lint": "@php ./vendor/bin/phpcs",
+		"test": "@php ./vendor/bin/phpunit"
     }
 }
