CI: Update PHP 7.2 build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,16 +76,22 @@ jobs:
       - run:
           name: "Install Dependencies"
           command: bash .dev/bin/install-dependencies.sh
+            cp -a $HOME/project /tmp/wordpress/wp-content/plugins/coblocks
       - run:
           name: "Run PHPCS"
           command: composer run lint -- -v
       - run:
-          name: "Run PHPUnit - Single Site"
-          command: phpunit
+          name: "Run PHPUnit - Single Site - Generate Coverage Reports"
+          command: composer run test -- --coverage-html=/tmp/artifacts/code-coverage/phpunit/html --coverage-clover=/tmp/artifacts/code-coverage/phpunit/results.xml --coverage-text
           working_directory: /tmp/wordpress/wp-content/plugins/coblocks
+      - store_artifacts:
+          path: /tmp/artifacts/code-coverage/
+          destination: phpunit-coverage
+      - store_test_results:
+          path: /tmp/artifacts/code-coverage/
       - run:
-          name: "Run PHPUnit - Multisite"
-          command: WP_MULTISITE=1 phpunit
+          name: "Run PHPUnit - Multi Site"
+          command: WP_MULTISITE=1 composer run test
           working_directory: /tmp/wordpress/wp-content/plugins/coblocks
 
   jest:
@@ -113,9 +119,9 @@ jobs:
           command: grunt eslint
       - run:
           name: Run jest tests
-          command: npm test -- --ci --runInBand --coverage --coverageDirectory=/tmp/artifacts/code-coverage
+          command: npm test -- --ci --runInBand --coverage --coverageDirectory=/tmp/artifacts/code-coverage/jest
       - store_artifacts:
-          path: /tmp/artifacts/code-coverage
+          path: /tmp/artifacts/code-coverage/
           destination: jest-coverage
 
   deploy:
