--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,7 @@ jobs:
           command: grunt eslint
       - run:
           name: Run jest tests
-          command: npm test -- --ci --runInBand --coverage --coverageDirectory=/tmp/artifacts/code-coverage/jest
+          command: JEST_JUNIT_OUTPUT_DIR="/tmp/artifacts/code-coverage/jest/" JEST_JUNIT_OUTPUT_NAME="results.xml" npm test -- --ci --runInBand --coverageDirectory=/tmp/artifacts/code-coverage/jest/html
       - store_artifacts:
           path: /tmp/artifacts/code-coverage/
           destination: jest-coverage
