--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
     "type": "wordpress-plugin",
     "require": {
         "php": ">=5.6"
-    },
+	},
+	"config": {
+		"platform": {
+			"php": "5.6"
+		}
+	},
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
