--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
 		"grunt-text-replace": "^0.4.0",
 		"grunt-wp-readme-to-markdown": "^2.0.1",
 		"gzip-size": "^4.1.0",
+		"html-react-parser": "^0.9.1",
 		"husky": "^3.0.8",
 		"inquirer": "^5.0.0",
 		"jest": "^24.8.0",
@@ -171,8 +172,5 @@
 		"coverageReporters": [
 			"html"
 		]
-	},
-	"dependencies": {
-		"html-react-parser": "^0.9.1"
 	}
 }
