--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ workflows:
     jobs:
       # Support PHP Versions
       # http://php.net/supported-versions.php
-      - php71-build: # Will be deprecated on 1 Dec 2019
+      - php56-build:
           filters:
             tags:
               only: /.*/
@@ -18,7 +18,7 @@ workflows:
               only: /.*/
       - deploy:
           requires:
-            - php71-build
+            - php56-build
             - php72-build
             - jest
           filters:
@@ -29,9 +29,9 @@ workflows:
 
 version: 2
 jobs:
-  php71-build:
+  php56-build:
     docker:
-      - image: circleci/php:7.1
+      - image: circleci/php:5.6
       - image: circleci/mysql:5.7
     steps:
       - checkout
@@ -44,19 +44,22 @@ jobs:
           name: "Install Dependencies"
           command: |
             bash .dev/bin/install-dependencies.sh
+            cp -a $HOME/project /tmp/wordpress/wp-content/plugins/coblocks
       - run:
           name: "Run PHPCS"
-          command: phpcs --standard=phpcs.xml --extensions=php --colors -s -p -v .
+          command: composer run lint -- -v
       - run:
           name: "Run PHPUnit - Single Site - Generate Coverage Reports"
-          command: phpunit --coverage-html=/tmp/artifacts/code-coverage/html --coverage-clover=/tmp/artifacts/code-coverage/clover --coverage-text
+          command: composer run test -- --coverage-html=/tmp/artifacts/code-coverage/phpunit/html --log-junit=/tmp/artifacts/code-coverage/phpunit/results.xml
           working_directory: /tmp/wordpress/wp-content/plugins/coblocks
       - store_artifacts:
-          path: /tmp/artifacts/code-coverage/html
+          path: /tmp/artifacts/code-coverage/
           destination: phpunit-coverage
+      - store_test_results:
+          path: /tmp/artifacts/code-coverage/
       - run:
           name: "Run PHPUnit - Multi Site"
-          command: WP_MULTISITE=1 phpunit
+          command: WP_MULTISITE=1 composer run test
           working_directory: /tmp/wordpress/wp-content/plugins/coblocks
 
   php72-build:
@@ -72,17 +75,24 @@ jobs:
             source /home/circleci/.bashrc
       - run:
           name: "Install Dependencies"
-          command: bash .dev/bin/install-dependencies.sh
+          command: |
+            bash .dev/bin/install-dependencies.sh
+            cp -a $HOME/project /tmp/wordpress/wp-content/plugins/coblocks
       - run:
           name: "Run PHPCS"
-          command: phpcs --standard=phpcs.xml --extensions=php --colors -s -p -v .
+          command: composer run lint -- -v
       - run:
-          name: "Run PHPUnit - Single Site"
-          command: phpunit
+          name: "Run PHPUnit - Single Site - Generate Coverage Reports"
+          command: composer run test -- --coverage-html=/tmp/artifacts/code-coverage/phpunit/html --log-junit=/tmp/artifacts/code-coverage/phpunit/results.xml
           working_directory: /tmp/wordpress/wp-content/plugins/coblocks
+      - store_artifacts:
+          path: /tmp/artifacts/code-coverage/
+          destination: phpunit-coverage
+      - store_test_results:
+          path: /tmp/artifacts/code-coverage/
       - run:
-          name: "Run PHPUnit - Multisite"
-          command: WP_MULTISITE=1 phpunit
+          name: "Run PHPUnit - Multi Site"
+          command: WP_MULTISITE=1 composer run test
           working_directory: /tmp/wordpress/wp-content/plugins/coblocks
 
   jest:
@@ -110,10 +120,12 @@ jobs:
           command: grunt eslint
       - run:
           name: Run jest tests
-          command: npm test -- --ci --runInBand --coverage --coverageDirectory=/tmp/artifacts/code-coverage
+          command: JEST_JUNIT_OUTPUT_DIR="/tmp/artifacts/code-coverage/jest/" JEST_JUNIT_OUTPUT_NAME="results.xml" npm test -- --ci --runInBand --reporters="default" --reporters="jest-junit" --coverage --coverageDirectory=/tmp/artifacts/code-coverage/jest/html
       - store_artifacts:
-          path: /tmp/artifacts/code-coverage
+          path: /tmp/artifacts/code-coverage/
           destination: jest-coverage
+      - store_test_results:
+          path: /tmp/artifacts/code-coverage/
 
   deploy:
     docker:
